--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap-sass-official": "~3.3.1",
     "jquery": "~2.1.3",
-    "dynatable": "~0.3.1"
+    "dynatable": "~0.3.1",
+    "intro.js": "~1.0.0"
   }
 }
